# fair-sense-ai

./: .gitignore  CONTRIBUTING.md  README.md  fairsenseai-1.py  fairsenseai.py  pyproject.toml  setup.py
.github/workflows/: publish_and_release.yaml
cluster/: requirements.txt
data/: ai_rmf_index.faiss
docs/: README.md
docs/source/: ai_risk_management.rst  api.rst  conf.py  contact.rst  doc_user_guide.md  index.rst  installation.rst  intro.rst  license.rst  quickstart.rst  troubleshooting.rst  tutorial.rst  usage_instructions.rst
docs/source/_templates/: base.html
docs/source/reference/api/: fairsenseai.ai_governance.rst  fairsenseai.analysis.rst  fairsenseai.analyze_bias.rst  (+3 more)
executable/: README.md  fairsenseai-mac.spec  fairsenseai-win+linux.spec  make.sh
fairsenseai/: app.py  fairsenseai.py  model_inference.py  runtime.py
fairsenseai/analysis/: ai_governance.py  ai_safety_dashboard.py  bias.py  risk_assessment.py  risk_with_embedding.py  save_embedding.py
fairsenseai/dataframes_and_indexes/: preprocessed_risks_df.csv  risk_index.faiss
fairsenseai/ui/: about.html  footer.html  home.html  index.css
fairsenseai/utils/: file.py  format.py  helper.py
installer/: README.md  fairsenseai-linux.spec  fairsenseai-mac.spec  fairsenseai-win+linux.spec  fairsenseai-win.spec  fairsenseai.spec  main.py  make.sh
local/: fairsense-ai-1.py  requirements.txt.txt
quick_tutorial/: ai_governance_response.py  analyze_image.py  analyze_image_batch.py  analyze_text.py  analyze_text_csv.py  start_server.py
recipes/: single-model.py  thoughts-n-todo.md
(+18 files in other folders)
