[tool.poetry]
name = "fair-sense-ai"
version = "0.8.2"
description = ""
authors = ["Vector AI Engineering <ai_engineering@vectorinstitute.ai>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/VectorInstitute/fair-sense-ai"
documentation = "https://vectorinstitute.github.io/FairSense-AI/"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache-2.0 License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
ollama = "^0.4.5"
transformers = "^4.47.1"
pillow = "^10.4"
pandas = "^2.2.3"
gradio = "^4"
plotly = "^5.24.1"
pytesseract = "^0.3.13"
opencv-python = "^4.10.0.84"
numpy = "^1.26"
torch = "^2.5.1"
